c3prj1_deck/grade.txt
Grading at Thu Feb 28 00:00:21 UTC 2019
Compiling deck.c
deck.c: In function ‘shuffle’:
deck.c:31:11: error: called object ‘rand’ is not a function or function pointer
     rand= rand()%n;
           ^
deck.c:29:7: note: declared here
   int rand;
       ^
Could not compile your deck.c!

Overall Grade: FAILED
